--- a/classes/React/MoviesApp/package.json
+++ b/classes/React/MoviesApp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
     "lucide-react": "^0.476.0",
