--- a/classes/BookMyShow/Server/package.json
+++ b/classes/BookMyShow/Server/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
