--- a/classes/BookMyShow/Server/package.json
+++ b/classes/BookMyShow/Server/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "stripe": "^18.0.0"
   }
